--- a/app/views/calculation_templates/square_form.html.erb
+++ b/app/views/calculation_templates/square_form.html.erb
@@ -3,7 +3,7 @@
     <label for="user_number">Enter a number</label>
   </div>
   <div>
-    <input type="text" name="number" id="user_number" placeholder="What number do you want to take the square of?">
+    <input type="text" name="hamster" id="user_number" placeholder="What number do you want to take the square of?">
   </div>
   <button>Calculate square</button>
 </form>
