rand is complete

--- a/app/views/calculation_templates/random_form.html.erb
+++ b/app/views/calculation_templates/random_form.html.erb
@@ -1,10 +1,10 @@
 <form action="/random/results">
   <div>
-    <label for="rand_number_min">Minimum</label>
+    <label for="user_number_min">Minimum</label>
     <input type="text" name="randmin" id="user_number_min" placeholder="E.g 1.5">
   </div>
   <div>
-    <label for="rand_number_max">Maximum</label>
+    <label for="user_number_max">Maximum</label>
     <input type="text" name="randmax" id="user_number_max" placeholder="E.g 4.5">
   </div>
   <button>Pick random number</button>
